<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/small_padding"
    tools:context=".NewExerciseActivity">

    <EditText
        android:id="@+id/exercise_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/exercise_name_hint"
        android:inputType="textAutoComplete" />

    <EditText
        android:id="@+id/type_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/exercise_type_hint"
        android:inputType="textAutoComplete" />

    <CheckBox
        android:id="@+id/additional_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weight_checkbox" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_button" />
</LinearLayout>