<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/small_padding"
    tools:context=".TrainingActivity">


    <TextView
        android:id="@+id/exercise_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="EXERCISE NAME"
        style="@style/workout_label_name"/>

    <TextView
        android:id="@+id/set_number"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/set_number"
        style="@style/workout_label_sets"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/reps_to_do_label"
        style="@style/workout_label"/>

    <TextView
        android:id="@+id/reps_to_do"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="23"
        style="@style/big_letters_workout" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/reps_done_label"
        style="@style/workout_label"/>

    <EditText
        android:id="@+id/reps_done"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:inputType="number"
        android:text="23"
        style="@style/big_letters_workout"/>

    <Button
        android:id="@+id/next_set_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/next_set"
        style="@style/next_set_button"/>

    <!--    TODO editText style, change text color to main for visability, change all text clolor to back-->


</LinearLayout>